Fix the icons alignment issue on 1150 screen width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,9 @@ body {
     padding-right: 5px;
   }
 }
+
+@media (min-width: 1150px) {
+  .flex-row-1150 {
+    flex-direction: row;
+  }
+}
